# syslua

./: .luarc.json  .rustfmt.toml  .stylua.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  init.lua  selene.toml  syslua.yml
.beads/: issues.jsonl
.claude/: settings.json
.github/workflows/: ci.yml  release-pr.yml  release.yml
.opencode/plugin/: format.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs  prompts.rs
crates/cli/src/cmd/: apply.rs  destroy.rs  diff.rs  gc.rs  info.rs  init.rs  mod.rs  plan.rs  snapshot.rs  status.rs  update.rs
crates/cli/tests/: cli_smoke.rs
crates/cli/tests/fixtures/: bind_check.lua  bind_create.lua  bind_update.lua  build_only.lua  build_with_exec.lua  multi_build.lua  rollback_bind_failure.lua  rollback_build_failure.lua  script_bash.lua  script_bind.lua  script_cmd.lua  script_custom_name.lua  script_invalid_format.lua  script_method.lua  script_multiple.lua  script_powershell.lua  script_shell.lua
crates/cli/tests/integration/: apply_tests.rs  common.rs  destroy_tests.rs  gc_tests.rs  inputs_tests.rs  mod.rs  script_tests.rs  snapshot_tests.rs
crates/core/: Cargo.toml
crates/core/src/: env.rs  error.rs  fetch.rs  hash.rs  lib.rs  manifest.rs  plan.rs  store.rs
crates/lib/: AGENTS.md  Cargo.toml
crates/lib/src/: consts.rs  eval.rs  lib.rs  placeholder.rs  store_lock.rs  types.rs
crates/lib/src/action/: mod.rs  types.rs
crates/lib/src/action/actions/: mod.rs
crates/lib/src/bind/: AGENTS.md  execute.rs  lua.rs  mod.rs  state.rs  store.rs  types.rs
crates/lib/src/execute/: AGENTS.md  apply.rs  bind.rs  build.rs  dag.rs  mod.rs  resolver.rs  types.rs
crates/lib/src/execute/actions/: cmd.rs  fetch.rs  mod.rs
crates/lib/src/gc/: mod.rs
crates/lib/src/init/: mod.rs  templates.rs
crates/lib/src/inputs/: AGENTS.md  fetch.rs  graph.rs  lock.rs  mod.rs  resolve.rs  store.rs  types.rs
crates/lib/src/lua/: AGENTS.md  bind.rs  build.rs  entrypoint.rs  globals.rs  inputs.rs  loader.rs  loaders.rs  mod.rs  runtime.rs
crates/lib/src/lua/helpers/: mod.rs  path.rs
crates/lib/src/manifest/: mod.rs  types.rs
crates/lib/src/outputs/: lua.rs  mod.rs
crates/lib/src/platform/: AGENTS.md  arch.rs  immutable.rs  mod.rs  os.rs  paths.rs
crates/lib/src/platform/paths/: mod.rs  store.rs
crates/lib/src/snapshot/: diff.rs  storage.rs  types.rs
crates/lib/src/store/: mod.rs  paths.rs
crates/lib/src/update/: mod.rs
crates/lib/src/util/: hash.rs  mod.rs  testutil.rs
crates/lib/tests/fixtures/: interpolation_test.lua  priority_basic.lua
crates/lib/tests/fixtures/environment/: packages_basic.lua
crates/lib/tests/fixtures/group/: group_basic.lua
crates/lib/tests/fixtures/groups/: groups_basic.lua
crates/lib/tests/fixtures/user/: test_user_config.lua  user_basic.lua
crates/lua/: Cargo.toml
crates/lua/src/: error.rs  eval.rs  globals.rs  lib.rs  manifest.rs  runtime.rs  types.rs
crates/platform/: Cargo.toml
crates/platform/src/: error.rs  lib.rs  paths.rs  platform.rs  shell.rs
crates/sops/: Cargo.toml
docs/: ARCHITECTURE.md
docs/architecture/: 00-overview.md  01-builds.md  02-binds.md  03-store.md  04-lua-api.md  05-snapshots.md  06-inputs.md  07-modules.md  08-apply-flow.md  09-platform.md
docs/plans/: 2026-01-08-environment-packages-implementation.md  2026-01-09-ctx-script-implementation.md  2026-01-09-user-module-implementation.md  atomic-apply-rollback.md  implementation-gaps.md  priority-system.md  programs-module.md
docs/specs/: 2026-01-08-environment-packages-design.md  2026-01-09-ctx-script-design.md  2026-01-09-user-module-design.md  feature_standard-pkgs-system.md
examples/basic/: init.lua
examples/basic-dotfiles/: init.lua
examples/cli-tools/: init.lua
examples/dev-environment/: init.lua
lua/: globals.d.lua  template.lua
lua/syslua/: globals.d.lua  group.lua  groups.lua  init.lua  interpolation.lua  json.lua  priority.lua  toml.lua  user.lua  users.lua  yaml.lua
lua/syslua/environment/: aliases.lua  files.lua  init.lua  packages.lua  variables.lua
lua/syslua/lib/: extract.lua  init.lua  programs.lua
lua/syslua/modules/: alias.lua  env.lua  file.lua  init.lua
lua/syslua/pkgs/: AGENTS.md  init.lua
lua/syslua/pkgs/cli/: fd.lua  init.lua  jq.lua  ripgrep.lua
lua/syslua/programs/: fd.lua  init.lua  jq.lua  ripgrep.lua
lua/syslua/types/: bind.d.lua  build.d.lua  globals.d.lua  path.d.lua
pkgs/cli/ripgrep/: 15_1_0.lua  init.lua
plan/: PROGRESS.md
tests/configs/: apply.lua  basic.lua  inputs.lua  placeholders.lua  rollback.lua
thoughts/plans/: better-cli-outputs.md  diff-command.md  doc-and-comment-updates.md  env-setup.md  garbage-collection.md  gc_command_implementation.md  package-modules.md  priority-system.md  rollback-command.md  service-modules.md  shell-command.md  standard-pkgs-system.md  store-improvements.md  sys-status-command.md  type-definitions.md  user-setup.md
thoughts/research/: 2025-12-29_better-cli-outputs.md  2025-12-30_doc-and-comment-updates.md  2025-12-31_gc_command.md
thoughts/reviews/: better-cli-outputs-review.md  better-logging-review.md  gc_command_implementation-review.md  standard-pkgs-system-review.md
thoughts/tickets/: better-logging.md  better-outputs.md  doc-and-comment-updates.md  feature_gc_command.md  feature_priority-system.md  feature_programs-module.md
