[workspace]
resolver = "2"
members = ["crates/cli", "crates/lib"]

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
temp-env = "0.3"
tempfile = "3.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.2"

syslua-cli = { path = "crates/cli" }
syslua-lib = { path = "crates/lib" }
