[package]
name = "syslua-cli"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "sys"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0"

# Workspace dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal dependencies
syslua-lib = { path = "../lib" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"
