[package]
name = "syslua-cli"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "sys"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.53", features = ["derive"] }
dunce = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
syslua-lib = { path = "../lib" }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
serial_test = { workspace = true }
temp-env = { workspace = true }
tracing-test = { workspace = true }
