[package]
name = "sys-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core logic dependencies
reqwest = { version = "0.12", features = ["json", "stream"] }
gix = "0.75"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1.0"
zip = "6.0"
walkdir = "2.5"
tempfile = "3.10"
semver = "1.0"
petgraph = "0.8"
rayon = "1.10"
toml = "0.9"
dirs = "6.0"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }

# Workspace dependencies
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Internal workspace crates
sys-lua = { workspace = true }
sys-platform = { workspace = true }
sys-sops = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
mockito = "1.4"
proptest = "1.4"
