[package]
name = "syslua-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
gix = { version = "0.75", default-features = false, features = [
  "blocking-network-client",
  "blocking-http-transport-reqwest-rust-tls",
  "worktree-mutation",
  "credentials",
  "revision",
] }
mlua = { version = "0.11", features = ["anyhow", "async", "lua54", "vendored"] }
sha2 = "0.10"
walkdir = "2"

# Workspace dependencies
hex = { workspace = true }
petgraph = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["process"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
] }
