[package]
name = "syslua-lib"
version = "0.7.0"
edition = "2024"

[dependencies]
dunce = { workspace = true }
gix = { version = "0.77", default-features = false, features = [
  "blocking-network-client",
  "blocking-http-transport-reqwest-rust-tls",
  "worktree-mutation",
  "credentials",
  "revision",
] }
hex = "0.4"
mlua = { version = "0.11", features = ["anyhow", "async", "lua54", "vendored"] }
petgraph = "0.8"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = "2.5"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["process", "fs"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
junction = "1.3"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
] }

[dev-dependencies]
serial_test = { workspace = true }
temp-env = { workspace = true }
tracing-test = { workspace = true }
