[package]
name = "sys-lua"
version = "0.1.0"
edition = "2024"

[dependencies]
# Lua-specific dependencies
dirs = "5.0"

# Workspace dependencies
mlua = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Internal workspace crates
sys-platform = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
