[package]
name = "sys-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
# Lua-specific dependencies
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"

# Workspace dependencies
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Internal workspace crates
sys-platform = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
