[package]
name = "sys-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
# Platform-specific dependencies
dirs = "6.0"
whoami = "1.5"
sysinfo = "0.37"

# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Unix-specific dependencies (Linux/macOS)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["fs", "user", "process"] }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "winnt",
  "winerror",
  "winreg",
  "aclapi",
  "accctrl",
  "winsvc",
] }
