[package]
name = "sys-sops"
version = "0.1.0"
edition = "2024"

[dependencies]
# SOPS integration - Age encryption only (pure Rust)
age = "0.11"
base64 = "0.22"

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
